akamai 캐시 퍼지, summary 추가 (#4)
- EdgeGrid 이용 캐시 purge
- summary 추가 

---------

Co-authored-by: hamtolchu <seungjaey@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: 'The name of your action here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'actions-akamai-cache-purge'
+description: 'cache purge'
+author: 'seungjaey'
 
 # Add your action's branding here. This will appear on the GitHub Marketplace.
 branding:
@@ -9,15 +9,21 @@ branding:
 
 # Define your inputs here.
 inputs:
-  milliseconds:
-    description: 'Your input description here'
+  CLIENT_TOKEN:
+    description: 'akamai auth > client token'
     required: true
-    default: '1000'
-
-# Define your outputs here.
-outputs:
-  time:
-    description: 'Your output description here'
+  CLIENT_SECRET:
+    description: 'akamai auth > client secret'
+    required: true
+  ACCESS_TOKEN:
+    description: 'akamai auth > access token'
+    required: true
+  HOST:
+    description: 'akamai auth > host'
+    required: true
+  URLS:
+    description: 'urls'
+    required: true
 
 runs:
   using: node20
