--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,8 +57,13 @@ jobs:
         id: test-action
         uses: ./
         with:
-          milliseconds: 2000
-
-      - name: Print Output
-        id: output
-        run: echo "${{ steps.test-action.outputs.time }}"
+          CLIENT_TOKEN: 1
+          CLIENT_SECRET: 1
+          ACCESS_TOKEN: 1
+          HOST: 1
+          URLS: |
+            url_1
+            url_1
+            url_1
+            url_1
+            url_1
